# zlyph

./: .gitignore  Cargo.toml  FEATURES.md  GPUI_TEXT_MIGRATION_PLAN.md  KEYBOARD_DEBUG.md  LICENSE  README.md  STATUS.md  TERMINAL_CONFIG.md
.github/workflows/: release.yml
src/: actions.rs  editor.rs  main.rs  theme.rs
zlyph-core/src/: actions.rs  engine.rs
zlyph-core/tests/: engine_tests.rs
zlyph-gpui/: FEATURES.md  TEST_LIVE_RELOAD.md  USAGE.md
zlyph-gpui/src/: editor.rs  editor_old.rs
zlyph-tui/: Cargo.toml
zlyph-tui/src/: main.rs
